# image_compress

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: ic_exception.h  ic_image.h
src/: CMakeLists.txt  CMakeLists.txt.BAK  main.cpp
src/apngasm/: apngasm-cli.cpp
src/apngasm/cli/: cli.cpp  cli.h  options.cpp
src/apngasm/lib/: apngasm-conf.h  apngasm.cpp
src/apngasm/lib/spec/priv/: specreaderimpl.cpp
src/icutil/: ic_util.cpp  ic_util.hpp
src/imageutil/: image_util.cpp  image_util.hpp
src/mozjpeg/wrapper/: cjpeg.c
src/ninepatch/: nine_patch_gen_helper.cpp  nine_patch_gen_helper.hpp  nine_patch_global_config.hpp  nine_patch_optimize.cpp  nine_patch_optimize.hpp  nine_patch_optimize_ext.cpp  nine_patch_util.cpp  nine_patch_util.hpp
src/pngimage/: png_image.cpp  png_image.hpp
src/pngquant/: getopt.h  pngquant.c
src/pngquant/lib/: libimagequant.c  nearest.c  viter.c
src/zopfli/: zopfli_bin.c  zopfli_lib.c
src/zopflipng/: zopflipng_bin.cc
test_resources/: readme.txt
