# aux source file as vars
AUX_SOURCE_DIRECTORY(. SRC_ROOT)
AUX_SOURCE_DIRECTORY(imageutil/ SRC_IMAGEUTIL)
AUX_SOURCE_DIRECTORY(pngimage/ SRC_PNGIMAGE)
AUX_SOURCE_DIRECTORY(zlib/ SRC_ZLIB)
AUX_SOURCE_DIRECTORY(libpng/ SRC_LIBPNG)

# find opencv package
FIND_PACKAGE(OpenCV REQUIRED)

# find boost package
FIND_PACKAGE(Boost REQUIRED)

# add executable
ADD_EXECUTABLE(image_compress ${SRC_ROOT} ${SRC_ZLIB} ${SRC_LIBPNG} ${SRC_PNGIMAGE} ${SRC_IMAGEUTIL})

# link libs
TARGET_LINK_LIBRARIES(image_compress ${OpenCV_LIBS})