# aux source file as vars
AUX_SOURCE_DIRECTORY(. SRC_ROOT)
AUX_SOURCE_DIRECTORY(icutil/ SRC_ICUTIL)
AUX_SOURCE_DIRECTORY(pngimage/ SRC_PNGIMAGE)
AUX_SOURCE_DIRECTORY(zlib/ SRC_ZLIB)
AUX_SOURCE_DIRECTORY(libpng/ SRC_LIBPNG)
AUX_SOURCE_DIRECTORY(pngquant/ SRC_PNGQUANT)
AUX_SOURCE_DIRECTORY(pngquant/lib/ SRC_PNGQUANT_LIB)
AUX_SOURCE_DIRECTORY(zopfli/ SRC_ZOPFLI)
AUX_SOURCE_DIRECTORY(zopflipng/ SRC_ZOPFLIPNG)
AUX_SOURCE_DIRECTORY(zopflipng/lodepng/ SRC_PNGQUANT_LODEPNG)
AUX_SOURCE_DIRECTORY(apngasm/ SRC_APNGASM)
AUX_SOURCE_DIRECTORY(apngasm/cli/ SRC_APNGASM_CLI)
AUX_SOURCE_DIRECTORY(apngasm/lib/ SRC_APNGASM_LIB)
AUX_SOURCE_DIRECTORY(apngasm/lib/listener/ SRC_APNGASM_LIB_LISTENER)
AUX_SOURCE_DIRECTORY(apngasm/lib/spec/ SRC_APNGASM_LIB_SPEC)
AUX_SOURCE_DIRECTORY(apngasm/lib/spec/priv/ SRC_APNGASM_LIB_SPEC_PRIV)
# AUX_SOURCE_DIRECTORY(ninepatch/ SRC_NINEPATCH)

# add executable
ADD_EXECUTABLE(image_compress ${SRC_ROOT} ${SRC_ZLIB} ${SRC_LIBPNG} ${SRC_PNGIMAGE} ${SRC_ICUTIL} ${SRC_PNGQUANT} ${SRC_PNGQUANT_LIB} ${SRC_ZOPFLI} ${SRC_ZOPFLIPNG} ${SRC_PNGQUANT_LODEPNG} ${SRC_APNGASM} ${SRC_APNGASM_LIB} ${SRC_APNGASM_CLI} ${SRC_APNGASM_LIB} ${SRC_APNGASM_CLI} ${SRC_APNGASM_LIB_LISTENER} ${SRC_APNGASM_LIB_SPEC} ${SRC_APNGASM_LIB_SPEC_PRIV} ${SRC_NINEPATCH})

# link libs
TARGET_LINK_LIBRARIES(image_compress ${OpenCV_LIBS} ${Boost_LIBRARIES})
